--- a/src/views/show.hbs
+++ b/src/views/show.hbs
@@ -1,5 +1,5 @@
-<h1>we're here!</h1>
+{{ log creature }}
 
-<p>{{ creature.name }}</p>
-<p>{{ creature.ability }}</p>
-<p>{{ creature.age }}</p>
+<h1>{{ creature.name }}</h1>
+<h2>age: {{ creature.age }}</h2>
+<h2>ability: {{ creature.ability }}</h2>
