--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,11 @@
-<h1>hello world</h1>
+{{!-- <h1>Welcome One and All to the Magical Creatures Website!</h1>
+<p>Check out our cool creatures</p> --}}
+
+{{!-- {{ log allCreatures }} --}}
+
+{{#each allCreatures }}
+  {{!-- {{ log this }} --}}
+  <li>
+    <a href="/magical-creatures/{{this.name}}">{{ this.name }}</a>
+  </li>
+{{/each}}
